# Basic-Dynamic-Elements-Characteristics-Drawer

./: CMakeLists.txt  Drawer_PL.ts  Drawer_pl_PL.ts  README.md  amplitudePhaseCharts.cpp  amplitudePhaseCharts.hpp  calculation.cpp  calculation.hpp  calculations.cpp  calculations.hpp  chartFormatter.hpp  main.cpp  themewidget.cpp  themewidget.h  themewidget.ui  timeCharts.cpp  timeCharts.hpp  types.h
calculation/: CMakeLists.txt  ICalculator.cpp  ampPhaseCalc.cpp  calculation.cpp  pidCalc.cpp  timeCalc.cpp
calculation/inc/calculation/: ICalculator.hpp  calculation.hpp  pidCalc.hpp  types.h
libraries/: CMakeLists.txt
libraries/app/: CMakeLists.txt
libraries/app/calculations/: CMakeLists.txt  calculations.cpp
libraries/app/calculations/inc/app/calculations/: calculations.hpp
libraries/calculation/: CMakeLists.txt  ICalculator.cpp  calculation.cpp
libraries/calculation/inc/calculation/: ICalculation.hpp  types.h
libraries/calculation/internal/pid/inc/pid/: pid.hpp
libraries/calculation/internal/value_time/inc/value_time/: value_time.hpp
libraries/calculations/: CMakeLists.txt  ICalculator.cpp
libraries/calculations/amp_phase/: CMakeLists.txt  amp_phase.cpp
libraries/calculations/amp_phase/inc/calculation/amp_phase/: ampPhaseCalc.hpp
libraries/calculations/inc/calculations/: ICalculations.hpp
libraries/calculations/unit_tests/: CMakeLists.txt  amp_phase_tests.cpp
libraries/translations/: CMakeLists.txt  Drawer_PL.ts
src/: main.cpp
translations/: Drawer_PL.ts
utils/: CMakeLists.txt  chartFormatter.cpp
widget/: CMakeLists.txt  themewidget.cpp  themewidget.ui
widget/inc/widget/: themewidget.h
